<resources>

    <string name="st_video_play_fail">播放失败</string>
    <string name="st_video_play_retry">点击重试</string>

    <string name="st_video_play_replay">重新播放</string>
    <string name="back">back</string>
    <string name="prev">prev</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="progress">progress</string>
    <string name="completion">completion</string>
    <string name="more">more</string>
    <string name="lock">lock</string>
    <string name="fullscreen">fullscreen</string>
    <string name="brightness">亮度调节</string>
    <string name="volume_change">音量调节</string>
    <string name="loading">正在加载中...</string>
    <string name="xxxk_s">xxxk/s</string>

</resources>
