<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@id/st_player_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/st_video_component_back"
        android:contentDescription="@string/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dip">

        <ImageView
            android:id="@id/st_player_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_prev"
            android:contentDescription="@string/prev" />

        <ImageView
            android:id="@id/st_player_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_pause"
            android:contentDescription="@string/pause" />

        <ImageView
            android:id="@id/st_player_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_next"
            android:contentDescription="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/st_player_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/st_player_loading_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:id="@id/st_player_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:src="@drawable/st_video_component_unlock" />

    <ImageView
        android:id="@id/st_player_more_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/st_video_component_more" />

</RelativeLayout>